# openstreetmap-exploration

./: .env.example  .gitignore  AREA_ANALYSIS.md  Makefile  README.md  pyproject.toml
data/: finland_tiles_classified_dissolved_osmdata_landmask.html  finland_tiles_dissolved.html  finland_tiles_dissolved_v2.html  france_tiles_classified_dissolved_osmdata_landmask.html  france_tiles_dissolved.html  helsinki_espoo_vantaa_tiles.html  hungary_tiles_dissolved.html  index.html
osm_tile_city_assignment/: pipeline.py
scripts/: import_landmask.sh  plot_country_tiles.py  plot_france_tiles.py  plot_hki_espoo_vantaa_tiles.py
sql/: 00_extensions.sql  05_persistent_tables.sql  10_country_boundary.sql  20_place_points.sql  25_country_landmask.sql  30_tiles_z14.sql  40_tile_city_assignment.sql  50_validation.sql  60_country_tile_area_summary.sql  61_country_tile_area_summary_geodesic.sql
