[project]
name = "osm-tile-city-assignment"
version = "0.1.0"
description = "Deterministic z14 tile to city assignment pipeline (PostGIS + OSM)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.20.0",
    "psycopg[binary]>=3.2.0",
]

[project.scripts]
osm-tile-pipeline = "osm_tile_city_assignment.pipeline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
